// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display correct information for changes 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper monochrome activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">You changed <span data-v-a8ade67f="" class="rich-text-file rich-text--component"><!----> <a title="" aria-label="" href="http://localhost:8080/index.php/f/776">Test file - renamed.md</a> <!----></span></div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f=""></div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 10:51 AM</span> <span title="April 29, 2021 10:51 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for comments 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper monochrome activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">You commented</div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f="">A comment</div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 11:04 AM</span> <span title="April 29, 2021 11:04 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for creations 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">You created <span data-v-a8ade67f="" class="rich-text-file rich-text--component"><!----> <a title="" aria-label="" href="http://localhost:8080/index.php/f/776">Test file.md</a> <!----></span></div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f=""></div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 10:49 AM</span> <span title="April 29, 2021 10:49 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for favorites 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">Added to favorites</div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f=""></div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 10:52 AM</span> <span title="April 29, 2021 10:52 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for moves 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper monochrome activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">You moved <span data-v-a8ade67f="" class="rich-text-file rich-text--component"><!----> <a title="" aria-label="" href="http://localhost:8080/index.php/f/776">Test file.md</a> <!----></span> to <span data-v-a8ade67f="" class="rich-text-file rich-text--component"><!----> <a title="" aria-label="" href="http://localhost:8080/index.php/f/753">Documents</a> <!----></span></div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f=""></div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 10:49 AM</span> <span title="April 29, 2021 10:49 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for renames 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper monochrome activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">You renamed <span data-v-a8ade67f="" class="rich-text-file rich-text--component"><!----> <a title="" aria-label="" href="http://localhost:8080/index.php/f/776">Test file - renamed.md</a> <!----></span> to <span data-v-a8ade67f="" class="rich-text-file rich-text--component"><!----> <a title="" aria-label="" href="http://localhost:8080/index.php/f/776">Test file - renamed - looooooooong.md</a> <!----></span></div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f=""></div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 11:12 AM</span> <span title="April 29, 2021 11:12 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for shares 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper monochrome activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">Shared as public link</div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f=""></div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 10:49 AM</span> <span title="April 29, 2021 10:49 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for tags 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper monochrome activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">Added system tag <strong data-v-a8ade67f="" class="rich-text--component">tag1</strong></div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f=""></div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 10:50 AM</span> <span title="April 29, 2021 10:50 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for unfavorites 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-5e06a890="" aria-label="Avatar of {displayName}" class="avatardiv popovermenu-wrapper monochrome activity-entry__icon activity-icon" style="--size: 15px; line-height: 15px; font-size: 7px;">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-a8ade67f="" class="activity-entry__content__subject rich-text--wrapper">
        <div data-v-a8ade67f="">Removed from favorites</div>
      </div>
      <div data-v-a8ade67f="" class="activity-entry__content__message rich-text--wrapper">
        <div data-v-a8ade67f=""></div>
      </div>
    </div> <span class="hidden-visually">April 29, 2021 10:52 AM</span> <span title="April 29, 2021 10:52 AM" class="activity-entry__date">11 days ago</span>
  </li>
</div>
`;
